fix(checkbox): deal checkbox align center with label zd/#INFR-4881

--- a/src/form/styles/form-check.scss
+++ b/src/form/styles/form-check.scss
@@ -43,7 +43,7 @@
     // Undo .form-check-input defaults and add some `margin-right`.
     .form-check-input {
         position: relative;
-        margin-top: 0;
+        margin-top: 2px;
         margin-right: variables.$form-check-inline-input-margin-r;
         margin-left: 0;
     }
@@ -51,7 +51,7 @@
 
 input[type='radio'],
 input[type='checkbox'] {
-    margin-top: 0px;
+    margin-top: 2px;
     -webkit-appearance: none;
     appearance: none;
     width: variables.$input-form-check-size;
